infra/k8s/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amfit-web
  namespace: amfit
  labels:
    app.kubernetes.io/name: "amfit-web"
    app.kubernetes.io/component: "frontend"
    app.kubernetes.io/managed-by: "argocd"
    environment: "dev"
    lab_id: "lab-k8s-01"
    lab_owner: "jose.mussauer"
spec:
  # Exposicao via MetalLB. DNS sugerido: app.amfit.local -> 192.168.1.206
  type: LoadBalancer
  loadBalancerIP: 192.168.1.206
  selector:
    app.kubernetes.io/name: "amfit-web"
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
